<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Title text for the empty view, which describes the empty box image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>

    <!-- Subtitle text for the empty view that prompts the user to add an inventory item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an inventory item</string>

    <!-- Title for the activity to add a new inventory item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_inventory_item">Add an Inventory Item</string>

    <!-- Title for the activity to edit an existing inventory item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_inventory_item">Edit Inventory Item</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_item_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_item_quantity">Quantity</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_item_price">Price</string>

    <!-- Label for overflow menu option that inserts fake inventory data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Inventory Items</string>

    <!-- Label for editor menu option to save inventory item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current inventory item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new inventory item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_item_failed">Error with saving inventory item</string>

    <!-- Toast message in editor when current inventory item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_inventory_item_successful">Inventory item updated</string>

    <!-- Toast message in editor when current inventory item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_item_successful">Inventory item deleted</string>

    <!-- Toast message in editor when current inventory item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_item_failed">Error with deleting inventory item</string>

    <!-- Dialog button text for the option to confirm deleting the current inventory item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current inventory item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message to ask the user to confirm deleting the current inventory item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this inventory item?</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current inventory item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

<!-- sale image content description -->
    <string name="sale_description">For Sale</string>

    <string name="unit"> unit</string>
    <string name="units"> units</string>
    <string name="no_more_stock">No more stock</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="phone">Phone</string>
    <string name="order">Order</string>
    <string name="picture_of_the_item">Picture of the inventory item</string>
    <string name="add_photo">Add Photo</string>



</resources>